--- a/styles/home/Navbar.module.scss
+++ b/styles/home/Navbar.module.scss
@@ -3,7 +3,7 @@
 .navbar {
 
     background-color: #282828;
-    position: absolute;
+    position: fixed;
     height: 75px;
     display: flex;
     width: 100%;
