--- a/styles/home/Banner.module.css
+++ b/styles/home/Banner.module.css
@@ -1,9 +1,18 @@
+/* Contains stylings for Home banner and section div */
+/* How elements display 
+
+    <Banner /> 
+    <Technology_Carousel />   <--- styles in Technology_Carousel.modules.scss
+    <sectioner />
+
+
+/*Banner Stylings*/
 .banner {
   display: flex;
   background-image: linear-gradient(180deg, rgba(40, 40, 40, 0.75), #50656e 100%), url("/developer_on_computer.jpg");
   justify-content: center;
   align-items: center;
-  height: 650px;
+  height: 550px;
   width: 100%;
 }
 
@@ -38,4 +47,12 @@
   border: none;
   font-size: 20px;
   font-weight: 500;
+}
+
+/* section div */
+.sectioner_banner {
+  height: 75px;
+  background-color: #50656e;
+  -webkit-clip-path: polygon(0 0, 100% 0, 80% 100%);
+          clip-path: polygon(0 0, 100% 0, 80% 100%);
 }/*# sourceMappingURL=Banner.module.css.map */
