--- a/styles/home/Technology_Carousel.module.scss
+++ b/styles/home/Technology_Carousel.module.scss
@@ -25,3 +25,13 @@
     color: white;
 
 }
+
+@media screen and (max-width: 1500px) {
+
+    .carousel_container {
+
+        width: 80%;
+    
+    }
+
+}
