--- a/styles/home/Banner.module.css
+++ b/styles/home/Banner.module.css
@@ -55,4 +55,34 @@
   background-color: #50656e;
   -webkit-clip-path: polygon(0 0, 100% 0, 80% 100%);
           clip-path: polygon(0 0, 100% 0, 80% 100%);
+}
+
+/* media queries */
+@media only screen and (max-width: 1500px) {
+  .banner_container {
+    width: 80%;
+  }
+}
+@media only screen and (max-width: 1150px) {
+  .banner_container {
+    width: 90%;
+  }
+}
+@media only screen and (max-width: 1150px) {
+  .banner_container {
+    width: 90%;
+  }
+}
+@media only screen and (max-width: 850px) {
+  .banner_container {
+    margin-top: -4em;
+  }
+  .headline_container {
+    width: auto;
+    text-align: center;
+  }
+  .headline_container h1 {
+    font-size: 40px;
+    margin-bottom: 1em;
+  }
 }/*# sourceMappingURL=Banner.module.css.map */
