--- a/styles/home/Navbar.module.scss
+++ b/styles/home/Navbar.module.scss
@@ -1,5 +1,3 @@
-
-
 .navbar {
 
     background-color: #282828;
@@ -12,7 +10,7 @@
     font-size: 18px;
     font-weight: 500;
     border-bottom: solid 1px #e0c260;
-
+    z-index: 100;
 }
 
 .nav_container {
@@ -32,7 +30,39 @@
     flex-direction: row;
     width: 45%;
 
+}
+
+.navbar_items a:hover {
+
+    color: white;
 
 }
 
+/* media queries */
+
+@media only screen and (max-width: 1500px) {
+
+    .nav_container {
+
+        width: 80%;
+
+    }
+
+}
+
+@media only screen and (max-width: 1150px) {
+
+    .nav_container {
+
+        width: 90%;
+
+    } 
+
+    .navbar_items {
+
+        width: 60%;
+
+    }
+
+}
 
