--- a/styles/home/Technology_Carousel.module.css
+++ b/styles/home/Technology_Carousel.module.css
@@ -18,4 +18,10 @@
   flex-direction: column;
   width: 70px;
   color: white;
+}
+
+@media screen and (max-width: 1500px) {
+  .carousel_container {
+    width: 80%;
+  }
 }/*# sourceMappingURL=Technology_Carousel.module.css.map */
