--- a/styles/home/Banner.module.scss
+++ b/styles/home/Banner.module.scss
@@ -66,6 +66,13 @@
     -webkit-box-shadow: 0px 2px 22px -8px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 2px 22px -8px rgba(0,0,0,0.75);
     box-shadow: 0px 2px 22px -8px rgba(0,0,0,0.75);
+    transition: background-color 0.5s ease;
+
+}
+
+.headline_container button:hover {
+
+    background-color: #c9af5e;
 
 }
 
