--- a/styles/home/Sectioner.module.scss
+++ b/styles/home/Sectioner.module.scss
@@ -5,7 +5,6 @@
     height: 75px;
 
 
-
 }
 
 .sectioner_banner_2 {
@@ -19,6 +18,15 @@
 .sectioner_banner_2_a {
 
     clip-path: polygon(0 0, 100% 0, 18% 100%);
+    height: 100%;
+    transform: translateY(-1px);
+
+}
+
+
+.sectioner_banner_2_b {
+
+    clip-path: polygon(0 0, 100% 0, 50% 100%);
     height: 100%;
     transform: translateY(-1px);
 
