--- a/styles/home/Static_portfolio.module.scss
+++ b/styles/home/Static_portfolio.module.scss
@@ -94,6 +94,13 @@
     -webkit-box-shadow: 0px 8px 9px -1px rgba(0,0,0,0.36);
     -moz-box-shadow: 0px 8px 9px -1px rgba(0,0,0,0.36);
     box-shadow: 0px 8px 9px -1px rgba(0,0,0,0.36);
+    transition: background-color 0.5s ease;
+
+}
+
+.button:hover {
+
+    background-color: #c9af5e;
 
 }
 
